<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="setting_mode"
        android:title="@string/setting_mode" >
    </PreferenceCategory>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="setting_enable_fingerprint"
        android:title="@string/setting_enable_fingerprint" />
    
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="setting_enable_private"
        android:title="@string/setting_enable_private" />

    <ListPreference
        android:defaultValue="Timeline"
        android:dialogTitle="@string/setting_start_view"
        android:entries="@array/setting_start_view"
        android:entryValues="@array/setting_start_view_key"
        android:key="setting_start_view"
        android:title="@string/setting_start_view" />
    
    <PreferenceCategory
        android:key="setting_filemanager"
        android:title="@string/tab_filemanager" >
    </PreferenceCategory>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="setting_show_original_name"
        android:summary="@string/setting_show_oriname_summary"
        android:title="@string/setting_show_oriname" />

    <PreferenceCategory
        android:key="setting_spicture"
        android:title="@string/tab_spicture" >
    </PreferenceCategory>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="setting_open_random"
        android:summary="@string/setting_open_random_summary"
        android:title="@string/setting_open_random" />

    <EditTextPreference
        android:defaultValue="20"
        android:key="setting_edit_casual"
        android:summary="@string/setting_edit_casual_number_summary"
        android:title="@string/setting_edit_casual_number" />

    <PreferenceCategory
        android:key="setting_auto_play"
        android:title="@string/menu_auto_play" >
    </PreferenceCategory>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="setting_show_animation"
        android:title="@string/setting_show_animation" />

    <EditTextPreference
        android:key="setting_min_items"
        android:summary="@string/setting_min_items_summary"
        android:title="@string/setting_min_items" />

    <ListPreference
        android:defaultValue="middle"
        android:dialogTitle="@string/setting_auto_play_speed"
        android:entries="@array/setting_auto_play_time"
        android:entryValues="@array/setting_auto_play_time_key"
        android:key="setting_auto_play_speed"
        android:title="@string/setting_auto_play_speed" />
    <ListPreference
        android:defaultValue="Repeatable"
        android:dialogTitle="@string/setting_auto_play_mode"
        android:entries="@array/setting_auto_play_mode"
        android:entryValues="@array/setting_auto_play_mode_key"
        android:key="setting_auto_play_mode"
        android:title="@string/setting_auto_play_mode" />

    <PreferenceCategory
        android:key="setting_sorder"
        android:title="@string/tab_sorder" >
    </PreferenceCategory>

    <ListPreference
        android:entries="@array/setting_sorder_mode"
        android:entryValues="@array/setting_sorder_mode_key"
        android:key="setting_sorder_mode"
        android:summary="@string/setting_sorder_mode_summary"
        android:title="@string/setting_sorder_mode" />

    <ListPreference
        android:entries="@array/setting_cover_cascade_num"
        android:entryValues="@array/setting_cover_cascade_num"
        android:key="setting_cover_cascade_num"
        android:title="@string/setting_sorder_cover_cascade_num" />
    
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="setting_sorder_enable_page"
        android:title="@string/setting_sorder_enable_page" />

    <EditTextPreference
        android:key="setting_sorder_page_numbers"
        android:title="@string/setting_sorder_set_page_numbers" />

    <PreferenceCategory
        android:key="setting_waterfall"
        android:title="@string/setting_waterfall" >
    </PreferenceCategory>
    <ListPreference
        android:defaultValue="3"
        android:dialogTitle="@string/setting_waterfall_colnumber"
        android:entries="@array/setting_waterfall_col"
        android:entryValues="@array/setting_waterfall_col"
        android:key="setting_waterfall_colnumber"
        android:title="@string/setting_waterfall_colnumber" />
    <ListPreference
        android:defaultValue="3"
        android:dialogTitle="@string/setting_waterfall_colnumber_hor"
        android:entries="@array/setting_waterfall_col_hor"
        android:entryValues="@array/setting_waterfall_col_hor"
        android:key="setting_waterfall_colnumber_hor"
        android:title="@string/setting_waterfall_colnumber_hor" />
    <PreferenceCategory
        android:key="setting_slidingmenu"
        android:title="@string/setting_slidingmenu" >
    </PreferenceCategory>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="setting_slidingmenu_enable"
        android:title="@string/setting_slidingmenu_enable" />
    
    <ListPreference
        android:defaultValue="3"
        android:dialogTitle="@string/setting_slidingmenu_mode"
        android:entries="@array/setting_slidingmenu_mode"
        android:entryValues="@array/setting_slidingmenu_mode_value"
        android:key="setting_slidingmenu_mode"
        android:title="@string/setting_slidingmenu_mode" />
    
    
</PreferenceScreen>