<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout 
        android:id="@+id/rgame_rule_button_group"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_alignParentBottom="true">
        <Button 
	        android:id="@+id/rgame_rule_ok"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/ok"/>
        <Button 
	        android:id="@+id/rgame_rule_cancel"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/cancel"/>
    </LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" 
	    android:layout_above="@id/rgame_rule_button_group">
	    <RadioGroup 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
	        <RadioButton 
		        android:id="@+id/rgame_radio_auto"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/rgame_auto"
	            />
	        <RadioButton 
		        android:id="@+id/rgame_radio_manual"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/rgame_manual"
			    android:checked="true"
	            />
	    </RadioGroup>
	    <RadioGroup 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
	        <RadioButton 
		        android:id="@+id/rgame_radio_replace"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/rgame_replace"
	            />
	        <RadioButton 
		        android:id="@+id/rgame_radio_followby"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/rgame_followby"
			    android:checked="true"
	            />
	    </RadioGroup>
	    <CheckBox 
	        android:id="@+id/rgame_check_image_thread_on"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/rgame_image_thread_on"
	        />
	    <CheckBox 
	        android:id="@+id/rgame_check_scene_on"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/rgame_scene_on"
	        />
	    <CheckBox 
	        android:id="@+id/rgame_check_repeatable"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/rgame_repeatable"
	        />
	    <LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
	        
		    <TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/rgame_random_number"
		        />
		    <EditText 
		        android:id="@+id/rgame_edit_random_number"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:inputType="number"/>
	    </LinearLayout>
	
	</LinearLayout>
</RelativeLayout>