<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dragsidebar_bk">
    <View 
        android:id="@+id/dragsidebar_bk"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"/>
    <ScrollView 
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:scrollbars="none">
    <LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:paddingLeft="@dimen/dragsidebar_padding_hor"
    	android:paddingRight="@dimen/dragsidebar_padding_hor">
		<TextView 
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textSize="@dimen/dragsidebar_title_text_size"
	    	android:textColor="@color/actionbar_bk_orange"
	    	android:layout_marginTop="@dimen/dragsidebar_padding_hor"
	    	android:text="@string/team_game_title_order"/>
	    <View 
	    	android:layout_width="match_parent"
	    	android:layout_height="2dp"
	    	android:layout_marginTop="5dp"
	    	android:background="@drawable/shape_team_game_divider"/>
	    <RadioGroup 
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="@dimen/dragsidebar_item_margin_top"
	    	android:orientation="horizontal">
	        <RadioButton 
	            android:id="@+id/game_team_radio_order_random"
		    	android:layout_width="0dp"
		    	android:layout_weight="1"
		    	android:layout_height="wrap_content"
		    	android:checked="true"
	    		android:textColor="@color/white"
	    		android:textSize="@dimen/dragsidebar_radio_text_size"
		    	android:text="@string/team_game_item_order_random"/>
	        <RadioButton 
	            android:id="@+id/game_team_radio_order_switch"
		    	android:layout_width="0dp"
		    	android:layout_weight="1"
		    	android:layout_height="wrap_content"
	    		android:textColor="@color/white"
	    		android:textSize="@dimen/dragsidebar_radio_text_size"
		    	android:text="@string/team_game_item_order_change"/>
	    </RadioGroup>
		<TextView 
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textSize="@dimen/dragsidebar_title_text_size"
	    	android:textColor="@color/actionbar_bk_orange"
	    	android:layout_marginTop="@dimen/dragsidebar_title_margin_top"
	    	android:text="@string/team_game_title_afterrandom"/>
	    <View 
	    	android:layout_width="match_parent"
	    	android:layout_height="2dp"
	    	android:layout_marginTop="5dp"
	    	android:background="@drawable/shape_team_game_divider"/>
	    <RadioGroup 
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="@dimen/dragsidebar_item_margin_top"
	    	android:orientation="horizontal">
	        <RadioButton 
	            android:id="@+id/game_team_radio_after_wait"
		    	android:layout_width="0dp"
		    	android:layout_weight="1"
		    	android:layout_height="wrap_content"
		    	android:checked="true"
	    		android:textColor="@color/white"
	    		android:textSize="@dimen/dragsidebar_radio_text_size"
		    	android:text="@string/team_game_item_afterrandom_wait"/>
	        <RadioButton 
	            android:id="@+id/game_team_radio_after_title"
		    	android:layout_width="0dp"
		    	android:layout_weight="1"
		    	android:layout_height="wrap_content"
	    		android:textColor="@color/white"
	    		android:textSize="@dimen/dragsidebar_radio_text_size"
		    	android:text="@string/team_game_item_afterrandom_filltitle"/>
	        <RadioButton 
	            android:id="@+id/game_team_radio_after_data"
		    	android:layout_width="0dp"
		    	android:layout_weight="1"
		    	android:layout_height="wrap_content"
	    		android:textSize="@dimen/dragsidebar_radio_text_size"
	    		android:textColor="@color/white"
		    	android:text="@string/team_game_item_afterrandom_filldata"/>
	    </RadioGroup>
		<TextView 
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textSize="@dimen/dragsidebar_title_text_size"
	    	android:textColor="@color/actionbar_bk_orange"
	    	android:layout_marginTop="@dimen/dragsidebar_title_margin_top"
	    	android:text="@string/team_game_title_title"/>
	    <View 
	    	android:layout_width="match_parent"
	    	android:layout_height="2dp"
	    	android:layout_marginTop="5dp"
	    	android:background="@drawable/shape_team_game_divider"/>
	    <RadioGroup 
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="@dimen/dragsidebar_item_margin_top"
	    	android:orientation="horizontal">
	        <RadioButton 
	            android:id="@+id/game_team_radio_title_edit"
		    	android:layout_width="0dp"
		    	android:layout_weight="1"
		    	android:layout_height="wrap_content"
		    	android:checked="true"
	    		android:textColor="@color/white"
	    		android:textSize="@dimen/dragsidebar_radio_text_size"
		    	android:text="@string/team_game_item_title_edit"/>
	        <RadioButton 
	            android:id="@+id/game_team_radio_title_team"
		    	android:layout_width="0dp"
		    	android:layout_weight="1"
		    	android:layout_height="wrap_content"
	    		android:textColor="@color/white"
	    		android:textSize="@dimen/dragsidebar_radio_text_size"
		    	android:text="@string/team_game_item_title_tm"/>
	        <RadioButton 
	            android:id="@+id/game_team_radio_title_ne"
		    	android:layout_width="0dp"
		    	android:layout_weight="1"
		    	android:layout_height="wrap_content"
	    		android:textColor="@color/white"
	    		android:textSize="@dimen/dragsidebar_radio_text_size"
		    	android:text="@string/team_game_item_title_ne"/>
	    </RadioGroup>
		<TextView 
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textSize="@dimen/dragsidebar_title_text_size"
	    	android:textColor="@color/actionbar_bk_orange"
	    	android:layout_marginTop="@dimen/dragsidebar_title_margin_top"
	    	android:text="@string/team_game_title_data"/>
	    <View 
	    	android:layout_width="match_parent"
	    	android:layout_height="2dp"
	    	android:layout_marginTop="5dp"
	    	android:background="@drawable/shape_team_game_divider"/>
	    <RadioGroup 
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="@dimen/dragsidebar_item_margin_top"
	    	android:orientation="horizontal">
	        <RadioButton 
	            android:id="@+id/game_team_radio_data_edit"
		    	android:layout_width="0dp"
		    	android:layout_weight="1"
		    	android:layout_height="wrap_content"
		    	android:checked="true"
	    		android:textColor="@color/white"
	    		android:textSize="@dimen/dragsidebar_radio_text_size"
		    	android:text="@string/team_game_item_data_edit"/>
	        <RadioButton 
	            android:id="@+id/game_team_radio_data_show"
		    	android:layout_width="0dp"
		    	android:layout_weight="1"
		    	android:layout_height="wrap_content"
	    		android:textColor="@color/white"
	    		android:textSize="@dimen/dragsidebar_radio_text_size"
		    	android:text="@string/team_game_item_data_show"/>
	        <RadioButton 
	            android:id="@+id/game_team_radio_data_noeffect"
		    	android:layout_width="0dp"
		    	android:layout_weight="1"
		    	android:layout_height="wrap_content"
	    		android:textColor="@color/white"
	    		android:textSize="@dimen/dragsidebar_radio_text_size"
		    	android:text="@string/team_game_item_data_ne"/>
	    </RadioGroup>
	    <LinearLayout 
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
		    android:layout_marginTop="@dimen/dragsidebar_btn_margin_top"
	    	android:orientation="horizontal">
			<TextView 
		        android:id="@+id/game_team_button_reset1"
		    	android:layout_width="0dp"
		    	android:layout_weight="1"
		    	android:layout_height="wrap_content"
		    	android:textSize="@dimen/dragsidebar_title_text_size"
		    	android:textColor="@color/white"
		    	android:paddingTop="10dp"
		    	android:paddingBottom="10dp"
		    	android:text="@string/team_game_btn_reset1"/>
			<TextView 
		        android:id="@+id/game_team_button_reset2"
		    	android:layout_width="0dp"
		    	android:layout_weight="1"
		    	android:layout_height="wrap_content"
		    	android:textSize="@dimen/dragsidebar_title_text_size"
		    	android:textColor="@color/white"
		    	android:paddingTop="10dp"
		    	android:paddingBottom="10dp"
		    	android:text="@string/team_game_btn_reset2"/>
	    </LinearLayout>
		<TextView 
	        android:id="@+id/game_team_button_new"
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:textSize="@dimen/dragsidebar_title_text_size"
	    	android:textColor="@color/white"
	    	android:layout_marginTop="@dimen/dragsidebar_title_margin_top"
	    	android:paddingTop="10dp"
	    	android:paddingBottom="10dp"
	    	android:text="@string/team_game_btn_new"/>
		<TextView 
	        android:id="@+id/game_team_button_loaddata"
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:textSize="@dimen/dragsidebar_title_text_size"
	    	android:textColor="@color/white"
	    	android:layout_marginTop="@dimen/dragsidebar_title_margin_top"
	    	android:paddingTop="10dp"
	    	android:paddingBottom="10dp"
	    	android:text="@string/team_game_btn_load"/>
	    <LinearLayout 
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
		    android:layout_marginTop="@dimen/dragsidebar_title_margin_top"
	    	android:orientation="horizontal">
			<TextView 
		        android:id="@+id/game_team_button_savedata"
		    	android:layout_width="0dp"
		    	android:layout_weight="1"
	    		android:layout_height="wrap_content"
		    	android:textSize="@dimen/dragsidebar_title_text_size"
		    	android:textColor="@color/white"
		    	android:paddingTop="10dp"
		    	android:paddingBottom="10dp"
		    	android:text="@string/team_game_btn_save"/>
			<TextView 
		        android:id="@+id/game_team_button_saveas"
		    	android:layout_width="0dp"
		    	android:layout_weight="1"
	    		android:layout_height="wrap_content"
		    	android:textSize="@dimen/dragsidebar_title_text_size"
		    	android:textColor="@color/white"
		    	android:paddingTop="10dp"
		    	android:paddingBottom="10dp"
		    	android:text="@string/team_game_btn_saveas"/>
		</LinearLayout>
		<TextView 
	        android:id="@+id/game_team_button_turn"
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:textSize="@dimen/dragsidebar_title_text_size"
	    	android:textColor="@color/white"
	    	android:layout_marginTop="@dimen/dragsidebar_title_margin_top"
	    	android:paddingTop="10dp"
	    	android:paddingBottom="10dp"
	    	android:text="@string/team_game_btn_turn"/>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
