<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
	<LinearLayout
	    android:id="@+id/layout_bottom"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:gravity="right"
	    android:orientation="vertical" >
	    <TextView 
		    android:id="@+id/mode_init_next"
		    android:layout_width="@dimen/mode_init_next_width"
		    android:layout_height="wrap_content"
		    android:text="@string/mode_init_next"
		    android:textSize="@dimen/mode_init_next_size"
		    android:gravity="center"
		    android:padding="@dimen/mode_init_next_padding"
		    android:background="@drawable/gallery_border_choose"
	        />
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_above="@id/layout_bottom"
	    android:gravity="center"
	    android:orientation="vertical" >
	    <TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/mode_init_title"
		    android:textSize="@dimen/mode_init_title_size"
	        />
	    <RadioGroup 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="@dimen/mode_init_firstradio_marginTop"
		    android:orientation="vertical">
	        <RadioButton 
	            android:id="@+id/mode_init_radio_public"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/mode_init_public"/>
	        <RadioButton 
	            android:id="@+id/mode_init_radio_private"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
		    	android:layout_marginTop="@dimen/mode_init_radio_marginTop"
			    android:text="@string/mode_init_private"/>
	        <RadioButton 
	            android:id="@+id/mode_init_radio_filemanager"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
		    	android:layout_marginTop="@dimen/mode_init_radio_marginTop"
			    android:text="@string/mode_init_filemanager"/>
	    </RadioGroup>
	    
		<LinearLayout
		    android:id="@+id/mode_init_hide_group"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="@dimen/mode_init_hide_marginTop"
		    android:visibility="invisible"
		    android:orientation="horizontal" >
	        <TextView 
			    android:layout_width="@dimen/login_user_text_width"
			    android:layout_height="wrap_content"
			    android:text="@string/login_pwd"
	            />
	        <EditText 
	            android:id = "@+id/mode_init_edit_pwd"
			    android:layout_width="@dimen/login_user_edit_width"
			    android:layout_height="wrap_content"
			    android:inputType="textPassword"
			    />
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>
